samples/_failures_safe/1761266343_98ed2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35f89903.c: In function ‘main’:
./samples/SAFE/__tmp_35f89903.c:152:12: error: missing terminating " character
  152 |     printf("\nCompressed data (%zu
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_35f89903.c:152:5: error: expected expression at end of input
  152 |     printf("\nCompressed data (%zu
      |     ^~~~~~
./samples/SAFE/__tmp_35f89903.c:152:5: error: expected declaration or statement at end of input
